# mindsphere-coach

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_DEPLOY.md  ROADMAP.md  START.bat  pyproject.toml
scripts/: run_demo.py
src/mindsphere/: __init__.py
src/mindsphere/api/: __init__.py  app.py  routes.py  schemas.py  session.py  websocket.py
src/mindsphere/content/: __init__.py  interventions.py  question_bank.py  templates.py
src/mindsphere/core/: __init__.py  action_dispatcher.py  agent.py  dependency_graph.py  emotional_state.py  inference.py  learning.py  model.py  user_profile.py  utils.py
src/mindsphere/frontend/: app.js  index.html  style.css
src/mindsphere/llm/: __init__.py  classifier.py  client.py  generator.py
src/mindsphere/tom/: __init__.py  empathy_planner.py  particle_filter.py  trust.py  user_types.py
src/mindsphere/viz/: __init__.py  dependency_viz.py  radar_chart.py
tests/: test_behavioral.py  test_efe_action_selection.py  test_emotion_accuracy.py  test_emotional_state.py  test_empathy_planner.py  test_inference.py  test_integration.py  test_model.py  test_particle_filter.py
