[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindsphere-coach"
version = "0.1.0"
description = "Interactive ToM-powered coaching agent with Active Inference"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "plotly>=5.18",
    "pydantic>=2.5",
    "requests>=2.31",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.25",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]
